# ai_agent

./: .env.example  pyproject.toml  requirements.txt  test.ipynb
notebooks/: test.ipynb
